# memomind

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  PHASE-3-PLAN.md  PHASE-4-PLAN.md  PR-003-search.md  PR-004-version-history.md  PR-005-import-export.md  PR-006-categories.md  PR-007-chinese-tokenizer.md  PR-008-backlinks.md  PR-009-api-wrapper.md  PR-010-performance-benchmark.md  PR-011-deployment-guide.md  PR-012-workspace.md  README.md  cli.py  docker-compose.yml  memomind.py  pyproject.toml  requirements.txt  run.py  start-memomind-dev.bat  start-memomind-silent.vbs  start-memomind.bat  test_deploy.py  test_deploy2.py
api/: __init__.py  client.py
benchmarks/: benchmark.py  chinese_search_benchmark.py  dreaming_benchmark.py  latency_benchmark.py  locomo_simplified.py  report_100k.json  report_10k.json  run_100k.py  run_10k.py  run_all.py  simple_benchmark.py
core/: __init__.py  activity_service.py  ai_anthropic.py  ai_compressor.py  ai_local.py  ai_openai.py  ai_provider.py  api_server.py  auto_tag_service.py  backup_service.py  collaboration_service.py  conflict_service.py  database.py  diff_service.py  dreaming_models.py  dreaming_scheduler.py  dreaming_service.py  export_service.py  import_service.py  knowledge_graph_service.py  link_service.py  models.py  rag_service.py  search_service.py  semantic_service.py  summarization_service.py  tag_service.py  tokenizer.py  user_service.py  version_service.py  workspace_service.py
docs/: 04-rest-api.md  05-data-models.md  06-deployment.md  README.md  (+7 more)
docs-project/: README.md
(+115 files in other folders)
