[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "memomind"
version = "2.0.0"
description = "团队知识库与智能笔记系统 - Team Knowledge Base & Smart Notes"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "mcp>=1.0.0",
    "jieba>=0.42.1",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.24.0",
    "tabulate>=0.9.0",
]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.25.0"]

[tool.setuptools]
py-modules = ["memomind"]

[tool.setuptools.packages.find]
include = ["api*", "core*", "mcp_server*"]
